--- a/index.html
+++ b/index.html
@@ -27,8 +27,19 @@
     // 🧠 Examples of usage:
     // processSingleLearner({ name: "Elisabeth", lovesJS: 1 }) // should return { name: "Elisabeth", lovesJS: true }
     // processSingleLearner({ name: "Pete", age: 23, lovesJS: 0 }) // should return { name: "Pete", age: 23, lovesJS: false }
-    const processSingleLearner = () => {
-
+    const processSingleLearner = ( object ) => {
+      for ( let obj in object ){
+        if ( obj === 'lovesJS' ) {
+          if ( object.lovesJS === 0 ) {
+            object.lovesJS = false;
+            return object
+          } else {
+            object.lovesJS = true;
+            return object
+          }
+          
+        }
+      }
     }
 
     // 👉 CHALLENGE 2
