--- a/index.html
+++ b/index.html
@@ -69,8 +69,15 @@
     // ❗ Notes:
     // 🧠 Solve this challenge using the forEach method of the learners array.
     // 🧠 Use arrow functions whenever possible.
-    const processLearnerForEach = () => {
-
+    const processLearnerForEach = ( arrayOfObjects ) => {
+      arrayOfObjects.forEach( obj => {
+        if ( obj['lovesJS'] === 0 ) {
+          obj['lovesJS'] = false;
+        } else if ( obj['lovesJS'] === 1 ) {
+          obj['lovesJS'] = true;
+        }
+      })
+      return arrayOfObjects
     }
 
     // 👉 CHALLENGE 4
